Fix Windows path
Signed-off-by: Ricardo Zanini <ricardozanini@gmail.com>